2020-01-05  Rob Buis  <rbuis@igalia.com>

        Tighten up stylesheet loading
        https://bugs.webkit.org/show_bug.cgi?id=189913

        Reviewed by Antti Koivisto.

        Update improved test result.

        * web-platform-tests/html/semantics/document-metadata/the-link-element/link-load-error-events.https-expected.txt:

2020-01-03  Rob Buis  <rbuis@igalia.com>

        Make text track loading set same-origin fallback flag
        https://bugs.webkit.org/show_bug.cgi?id=205744

        Reviewed by Darin Adler.

        Adjust test result to new behavior for text track loading.

        * web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/cloneNode-expected.txt:
        * web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-data-url-expected.txt:
        * web-platform-tests/service-workers/service-worker/webvtt-cross-origin.https-expected.txt:

2020-01-03  Chris Dumez  <cdumez@apple.com>

        Add support for DragEvent
        https://bugs.webkit.org/show_bug.cgi?id=205758

        Reviewed by Darin Adler.

        Rebaseline WPT tests now that more checks are passing.

        * web-platform-tests/dom/events/EventTarget-dispatchEvent-expected.txt:
        * web-platform-tests/dom/nodes/Document-createEvent.https-expected.txt:

2020-01-03  Chris Dumez  <cdumez@apple.com>

        dom/nodes/Document-createElement-namespace.html WPT test is failing
        https://bugs.webkit.org/show_bug.cgi?id=205748

        Reviewed by Sam Weinig.

        Rebaseline WPT test that is now passing.

        * web-platform-tests/dom/nodes/Document-createElement-namespace-expected.txt:

2020-01-03  Chris Dumez  <cdumez@apple.com>

        Document.createAttribute() should take in a localName, not a qualifiedName
        https://bugs.webkit.org/show_bug.cgi?id=205752

        Reviewed by Sam Weinig.

        Rebaseline WPT test now that it is passing. This test was failing in WebKit but passing