@@ -156,12 +156,6 @@
     "web-platform-tests/dom/traversal": "import", 
     "web-platform-tests/dom/traversal/unfinished": "skip", 
     "web-platform-tests/domparsing": "import", 
-    "web-platform-tests/domparsing/DOMParser-parseFromString-xml-doctype.html": "skip", 
-    "web-platform-tests/domparsing/DOMParser-parseFromString-xml.html": "skip", 
-    "web-platform-tests/domparsing/XMLSerializer-serializeToString.html": "skip", 
-    "web-platform-tests/domparsing/innerhtml-02.html": "skip", 
-    "web-platform-tests/domparsing/insert_adjacent_html-xhtml.xhtml": "skip", 
-    "web-platform-tests/domparsing/style_attribute_html.html": "skip", 
     "web-platform-tests/domxpath": "skip", 
     "web-platform-tests/dpub-aam": "skip", 
     "web-platform-tests/dpub-aria": "skip", 
